<resources>
    <string name="app_name">PicStorm</string>
    <string name="contentDescription">Content description</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="email">Эл. почта</string>
    <string name="passwordRepeat">Повторите пароль</string>
    <string name="registerTo">Зарегистрироваться</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="personal">Личная</string>
    <string name="global">Общая</string>
    <string name="dateFilter">Фильтр по дате</string>
    <string name="ratingFilter">Фильтр по рейтингу</string>
    <string name="withoutFilter">Без фильтра</string>
    <string name="byDay">За день</string>
    <string name="byWeek">За неделю</string>
    <string name="byLikes">По лайкам</string>
    <string name="byDislikes">По дизлайкам</string>
    <string name="ban">Заблокировать</string>
    <string name="makeAdmin">Сделать админом</string>
    <string name="demoteAdmin">Разжаловать админа</string>
    <string name="subscribers_label">Подписчики: </string>
    <string name="subscriptions_label">Подписки: </string>
    <string name="subscribers_title_label">Подписчики</string>
    <string name="subscriptions_title_label">Подписки</string>
    <string name="default_name_label">...</string>
    <string name="actionNo">Нет</string>
    <string name="actionYes">Да</string>
    <string name="actionOk">Ок</string>
    <string name="passwordNotMatch">Пароли не совпадают</string>
    <string name="photoLoad">Загрузить</string>
    <string name="photoCancel">Отмена</string>
    <string name="photoWasLoaded">Ваше фото было опубликовано</string>
    <string name="avatarWasLoaded">Новый аватар был установлен</string>
    <string name="confirmLogout">Вы хотите выйти из аккаунта?</string>
    <string name="confirmBan">Вы хотите заблокировать этого пользователя?</string>
    <string name="confirmDemote">Вы хотите разжаловать этого админа?</string>
    <string name="confirmMakeAdmin">Вы хотите сделать этого пользователя админом?</string>
    <string name="banPublicationConfirm">Вы хотите заблокировать эту публикацию?</string>
    <string name="deletePublicationConfirm">Вы хотите удалить свою публикацю?</string>
    <string name="userPublications">Публикации пользователя</string>
    <string name="myPublications">Мои публикации</string>
</resources>