<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginFragment"
    android:background="@color/picStorm_pink"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/exitImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDescription"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_back_arrow" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="40dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Forum.20.Grey"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editTextPassword"
                app:layout_constraintBottom_toTopOf="@id/editTextPassword"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Forum.20.Grey"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                app:layout_constraintBottom_toTopOf="@id/button_login"
                app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
                tools:layout_editor_absoluteX="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textAppearance="@style/Text.Forum.20"
                android:background="@drawable/button_login_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/button_reg"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                tools:layout_editor_absoluteX="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Forum.16.Violet"
                android:background="#0000"
                android:text="@string/register"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>